--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Skins DWG</title>
+        <link href="styles/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+       <div> 
         <h1>WORLDS 2020</h1>
         <h2>League Of Legends aspectos a los ganadores worlds 2020</h2>
         <img src="images/lol.jpg" alt="aspectos de campeones de league of legends de DWG">
@@ -16,7 +18,7 @@
                 <li>G2 por un (3-1)</li>
                 <li>y una final contra SUNS por un (3-1)</li>
             </ol>
-            <p>y asi con se mega merecieron ser los campeones del mundo  </p>    
+            <p>y asi se mega merecieron ser los campeones del mundo  </p>    
         <p>las selecciones de campeones para los aspectos otorgados por RIOT games por el WORLDS 2020 fueron</p>
             <ul>
                 <li>top jang "nuguri" se decanto por </li>
@@ -28,5 +30,8 @@
             <p>y asi nos dejaron unas preciosas skins con una tematica de Dioses con tonos azules y geniales efectos ver</p>
             <a href="https://www.youtube.com/embed/sCMbNzaDNjs">video skins WORLDS 2020</a> 
             <p> ahora esperar los worlds 2021 nos vemos.</p>
-    </body>
+            <button>Cambiar de usuario</button>
+        </div> 
+         <script src="scripts/main.js"></script>
+     </body>
 </html>
